RESOLVED FIXED52591
JavaScriptCore fails to link on FreeBSD/amd64
https://bugs.webkit.org/show_bug.cgi?id=52591
Summary JavaScriptCore fails to link on FreeBSD/amd64
Dimitry Andric
Reported 2011-01-17 11:46:51 PST
Created attachment 79197 [details] Fix JavaScriptCore linking on FreeBSD/amd64 On FreeBSD/amd64, JavaScriptCore fails to link with a similar error as in bug 28422: /usr/bin/ld: ../JavaScriptCore/release/libjscore.a(JITStubs.o): relocation R_X86_64_PC32 against `cti_vm_throw' can not be used when making a shared object; recompile with -fPIC /usr/bin/ld: final link failed: Bad value This is the same type of issue as under Linux: the symbol name in question needs to have a @plt suffix. Patch attached.
Attachments
Fix JavaScriptCore linking on FreeBSD/amd64 (490 bytes, patch)
2011-01-17 11:46 PST, Dimitry Andric
no flags
Fix JavaScriptCore linking on FreeBSD/amd64 (1.29 KB, patch)
2011-01-17 12:44 PST, Dimitry Andric
no flags
Fix JavaScriptCore linking on FreeBSD/amd64 (1.31 KB, patch)
2011-01-17 23:56 PST, Dimitry Andric
no flags
Dimitry Andric
Comment 1 2011-01-17 12:44:26 PST
Created attachment 79207 [details] Fix JavaScriptCore linking on FreeBSD/amd64 Updated patch to include ChangeLog entry.
Alexey Proskuryakov
Comment 2 2011-01-17 17:03:26 PST
+ * jit/JITStubs.cpp: use @plt suffix on x86_64 platforms, for both Linux + and FreeBSD. There's a tab remaining in the ChangeLog, sorry. Please mark a patch for review once it's ready, so that it doesn't get overlooked.
Dimitry Andric
Comment 3 2011-01-17 23:56:08 PST
Created attachment 79245 [details] Fix JavaScriptCore linking on FreeBSD/amd64 Update to r76001, and untabify ChangeLog entry.
WebKit Commit Bot
Comment 4 2011-01-18 13:46:36 PST
Comment on attachment 79245 [details] Fix JavaScriptCore linking on FreeBSD/amd64 Clearing flags on attachment: 79245 Committed r76060: <http://trac.webkit.org/changeset/76060>
WebKit Commit Bot
Comment 5 2011-01-18 13:46:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.