2011-01-18  Dimitry Andric  <dim@freebsd.org>

Reviewed by Andreas Kling.

        Fix linking JavaScriptCore on FreeBSD/amd64
        https://bugs.webkit.org/show_bug.cgi?id=52591

        Linking of JavaScriptCore on FreeBSD/amd64 fails, for the same reason as
        in bug 28422: cti_vm_throw needs a "@plt" suffix, otherwise the linker
        complains about the relocation type.

        * jit/JITStubs.cpp: use @plt suffix on x86_64 platforms, for both Linux
        and FreeBSD.

Canonical link: https://commits.webkit.org/66298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76060 268f45cc-cd09-0410-ab3c-d52691b4dbfc